--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -145,11 +145,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-manager-business-intelligence-and-insights-14072'>Senior Manager, Business Intelligence and Insights - Experian Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/senior-manager-business-intelligence-and-insights-14072'>Senior Manager, Business Intelligence and Insights - Experian Careers</a></h5> 
 <p><span class="badge badge-light">United States  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494831002'>Job Application for Director of Sales Business Intelligence  at Snowflake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494831002'>Job Application for Director of Sales Business Intelligence  at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -157,11 +157,11 @@
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/Gq7TFabQTF/Finance-Business-System-Analyst'>Finance Business System Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/Gq7TFabQTF/Finance-Business-System-Analyst'>Finance Business System Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -173,7 +173,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -189,7 +189,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999698295854-stage-business-intelligence-h-f-'>Proprioo Stage - Business intelligence (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999698295854-stage-business-intelligence-h-f-'>Proprioo Stage - Business intelligence (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -250,7 +250,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ashcompanies/job/oAF2afwb'>American Specialty Health, Inc. Careers - Business Intelligence Analyst, Team Lead</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ashcompanies/job/oAF2afwb'>American Specialty Health, Inc. Careers - Business Intelligence Analyst, Team Lead</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -275,7 +275,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -318,7 +318,7 @@ agile and geographically-dispersed BI team, focused on facilitating a company?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/asapp-2/7392fef8-6b2a-47f3-addd-1c9e20fec343/apply'>ASAPP - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/asapp-2/7392fef8-6b2a-47f3-addd-1c9e20fec343/apply'>ASAPP - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... BI Analyst Questions. Have you worked with BI tools for Analytical and 
 Explorative reporting? if so, which tools??. Are you familiar and comfortable with 
@@ -439,7 +439,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697843190-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697843190-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -455,7 +455,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pubnative.join.com/jobs/450496-sr-business-intelligence-and-yield-manager-m-f-div'>Job @ PubNative (Berlin): Sr. Business Intelligenc... | JOIN</a></h5> 
+<h5><a href='https://pubnative.join.com/jobs/450496-sr-business-intelligence-and-yield-manager-m-f-div'>Job @ PubNative (Berlin): Sr. Business Intelligenc... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
