--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698286964-senior-product-designer-analytics'>Optimizely Senior Product Designer, Analytics | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://www.womenwhocode.com/jobs/5461?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Product Manager - Mode | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -134,7 +138,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cardtronics.hiringthing.com/job/156897/director-global-software-product-manager'>Director, Global Software Product Manager @ Cardtronics</a></h5> 
+<h5><a href='https://cardtronics.hiringthing.com/job/156897/director-global-software-product-manager'>Director, Global Software Product Manager @ Cardtronics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -362,7 +366,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -448,10 +452,6 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4498655002'>Job Application for Product Designer Co-op at Copperleaf</a></h5> 
 <p><span class="badge badge-light">Vancouver, BC  Canada</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/hunterdouglas/job/o0z1afwu'>Hunter Douglas Inc. Careers - Associate Product Manager</a></h5> 
-<p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
